# 6502

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/: components.hh  shit502.hh
src/: main.cc  shit502.cc
src/shit502/: shit502.cc
